<resources>
    <string name="app_name">Weather App</string>
    <string name="forecast_activity_name">Forecast</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="low_temp">Low: %1$d°</string>
    <string name="high_temp">High: %1$d°</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="pressure">Pressure: %1$d hPa</string>
    <string name="wind_speed">Wind Speed: %1$s mph</string>
    <string name="forecast_button_label">Forecast</string>
    <string name="forecast_date">%1$s</string>
    <string name="forecast_temp">Temp: %1$s°</string>
    <string name="forecast_high">High: %1$s°</string>
    <string name="forecast_low"> Low: %1$s°</string>
    <string name="forecast_sunrise">Sunrise: %1$s</string>
    <string name="forecast_sunset">Sunset: %1$s</string>
    <string name="forecast_details_temp">%1$s°</string>
    <string name="ok">OK</string>
    <string name="zip_code">ZIP Code</string>
    <string name="submit">SUBMIT</string>
    <string name="search">Search</string>
    <string name="local_weather">Local Weather</string>
    <string name="location_permission_rationale">Location permission required to retrieve Local Weather data.</string>
    <string name="enable_notifications">Turn On Notifications</string>
    <string name="disable_notifications">Turn Off Notifications</string>
    <string name="notification_title">Location: %1$s</string>
    <string name="notification_text">Current Temp: %1$d°</string>
</resources>