<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".CurrentConditionsFragment">

    <TextView
        android:id="@+id/city_name"
        android:text="@string/st_paul_mn"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:text="@string/temperature"
        android:textSize="72sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/temperature"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun" />

    <TextView
        android:id="@+id/feels_like"
        android:text="@string/feels_like"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="@id/temperature" />

    <TextView
        android:id="@+id/low_temp"
        android:text="@string/low_temp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@id/feels_like"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/high_temp"
        android:text="@string/high_temp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/low_temp"
        app:layout_constraintStart_toStartOf="@id/low_temp" />

    <TextView
        android:id="@+id/humidity"
        android:text="@string/humidity"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/high_temp"
        app:layout_constraintStart_toStartOf="@id/high_temp" />

    <TextView
        android:id="@+id/pressure"
        android:text="@string/pressure"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintStart_toStartOf="@id/humidity" />

    <Button
        android:id="@+id/forecast_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:onClick="loadForecastActivity"
        android:text="@string/forecast_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>