<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/zipPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Enter a ZIP Code"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:background="@drawable/rectangle"
        android:paddingStart="12dp"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/localWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/local_weather" />

    <Button
        android:id="@+id/notificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enable_notifications" />

</LinearLayout>